--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+# NODE
+node_modules
+
+# PROJECT FILES
+.idea/
+
+# DATA
+raw-data/
+
+# CREDENTIALS
+credentials/
+
+# OSX GENERATED FILES
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
